@@ -1,0 +1,8 @@
+# {{crate}}
+
+{{readme}}
+
+[`inline_sql`]: https://docs.rs/inline-sql/latest/inline_sql/attr.inline_sql.html
+[`tokio_postgres`]: https://docs.rs/tokio-postgres
+[`Vec`]: https://doc.rust-lang.org/stable/std/vec/struct.Vec.html
+[`Option`]: https://doc.rust-lang.org/stable/std/option/enum.Option.html
